--- a/app/src/main/res/layout/activity_line_bus.xml
+++ b/app/src/main/res/layout/activity_line_bus.xml
@@ -1,12 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.chfmr.bragmobi.bragmobi.LineBusActivity">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView android:text="LINE BUS" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-</RelativeLayout>
+    <fragment android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="br.com.chfmr.bragmobi.bragmobi.LinhasDeOnibusListFragment"
+        android:id="@+id/listFragment" />
+</FrameLayout>
