--- a/app/src/main/res/layout/fragment_linhas_de_onibus_list.xml
+++ b/app/src/main/res/layout/fragment_linhas_de_onibus_list.xml
@@ -7,7 +7,7 @@
     <ListView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/list" />
+        android:id="@android:id/list" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
