--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="br.com.chfmr.bragmobi.bragmobi.CategoryActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView android:text="@null" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
