--- a/app/src/main/res/values-21/styles.xml
+++ b/app/src/main/res/values-21/styles.xml
@@ -1,15 +1,14 @@
 <resources>
+
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
+    <style name="AppTheme" parent="android:Theme.Material.Light">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/background</item>
-        <!--
         <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item> -->
-        <item name="colorPrimaryDark">@color/background</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
         <item name="actionMenuTextColor">@color/text_color</item>
         <item name="divider">@color/divider</item>
         <item name="android:windowBackground">@color/background</item>
     </style>
+
 </resources>
