--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+
+    
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_points_bus"
+        android:title="Pontos"
+        android:orderInCategory="100"
+        app:showAsAction="collapseActionView|always"
+        android:icon="@drawable/background_button_red"/>
+
+    <item android:id="@+id/action_linus_bus"
+        android:title="Linha"
+        android:orderInCategory="101"
+        app:showAsAction="collapseActionView|always"
+        android:icon="@drawable/background_button_blue"/>
+
+    <item android:id="@+id/action_main"
+        android:title="Home"
+        android:orderInCategory="102"
+        app:showAsAction="collapseActionView|always"
+        android:icon="@drawable/background_button_green"/>
 </menu>
