--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,12 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/background</item>
-        <!--
+<!--        <item name="colorPrimary">@color/background</item> -->
+
         <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item> -->
-        <item name="colorPrimaryDark">@color/background</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+       <!-- <item name="colorPrimaryDark">@color/background</item>-->
         <item name="colorAccent">@color/accent</item>
         <item name="actionMenuTextColor">@color/text_color</item>
         <item name="divider">@color/divider</item>
