--- a/app/src/main/res/layout/activity_line_bus.xml
+++ b/app/src/main/res/layout/activity_line_bus.xml
@@ -5,6 +5,6 @@
 
     <fragment android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="br.com.chfmr.bragmobi.bragmobi.LineBusListFragment"
+        android:name="br.com.chfmr.bragmobi.bragmobi.LineBus.LineBusListFragment"
         android:id="@+id/listFragment" />
 </FrameLayout>
