--- a/app/src/main/res/layout/activity_line_bus_detail.xml
+++ b/app/src/main/res/layout/activity_line_bus_detail.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#eeeeee"
-    tools:context="br.com.chfmr.bragmobi.bragmobi.LineBusDetailActivity">
+    tools:context="br.com.chfmr.bragmobi.bragmobi.LineBus.LineBusDetailActivity">
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -68,7 +68,7 @@
         android:layout_height="wrap_content"
         android:textColor="#000000"
         android:layout_gravity="center"
-        android:textSize="16dp"
+        android:textSize="16sp"
         />
 
         <TextView android:text="@null"
