--- a/app/src/main/res/layout/activity_station_bus.xml
+++ b/app/src/main/res/layout/activity_station_bus.xml
@@ -4,13 +4,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.chfmr.bragmobi.bragmobi.BusStation.BusStationActivity">
+    tools:context="br.com.chfmr.bragmobi.bragmobi.StationBusActivity">
 
-    <fragment
-        android:id="@+id/map"
-        android:layout_width="match_parent"
+    <fragment android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        />
+        android:name="br.com.chfmr.bragmobi.bragmobi.StationBusFragment"
+        android:id="@+id/listFragment" />
 
 </RelativeLayout>
