--- a/app/src/main/res/layout/activity_line_bus_detail.xml
+++ b/app/src/main/res/layout/activity_line_bus_detail.xml
@@ -25,7 +25,8 @@
         android:id="@+id/nomeLinha"
         android:textColor="#000000"
         android:layout_gravity="center"
-        android:textSize="16dp"
+        android:textSize="20dp"
+        android:layout_marginBottom="10dp"
         />
 
     <TextView
@@ -33,129 +34,90 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#000000"
-        android:layout_gravity="center"
-        android:textSize="16dp"
+        android:layout_gravity="left"
+        android:textSize="18dp"
         />
 
-    <!-- Itinerário Ida -->
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:shrinkColumns="*"
+        android:stretchColumns="*"
+        android:id="@+id/tableHorarios"
+        >
+    </TableLayout>
+
+    <Space
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center_horizontal"
+        android:background="#ff1a7317"
+        android:visibility="visible" />
+
+    <!-- ITINERÁRIOS IDA -->
 
     <TextView
         android:text="@string/activity_line_bus_detail_title_itinerary_from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#000000"
-        android:layout_gravity="center"
-        android:textSize="16dp"
+        android:layout_gravity="left"
+        android:textSize="18dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         />
 
-            <TextView android:text="@null"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/content_itinerary_from"
-                android:background="@drawable/background_textview_itineraries"
-                android:textColor="#000000"
-                android:layout_gravity="center"
-                android:textSize="16sp"
-                android:padding="14sp"
-                />
-
-
-    <!-- Itinerário Volta -->
-
-        <TextView
-        android:text="@string/activity_line_bus_detail_title_itinerary_to"
+    <TextView android:text="@null"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/content_itinerary_from"
+        android:background="@drawable/background_textview_itineraries"
         android:textColor="#000000"
         android:layout_gravity="center"
-        android:textSize="16sp"
+        android:textSize="16dp"
+        android:padding="14dp"
         />
 
-        <TextView android:text="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/content_itinerary_to"
-            android:textColor="#000000"
-            android:layout_gravity="center"
-            android:textSize="16dp"
-            android:background="@drawable/background_textview_itineraries"
-            android:padding="14sp"
-         />
+    <!-- ITINERÁRIOS VOLTA -->
 
-        <ProgressBar
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/progressBar"
-            android:layout_centerInParent="true"
-            android:visibility="gone"/>
+    <TextView
+    android:text="@string/activity_line_bus_detail_title_itinerary_to"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textColor="#000000"
+    android:layout_gravity="left"
+    android:textSize="18dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    />
 
-        <TextView
-            android:id="@android:id/empty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/progressBar"
-            android:textColor="#000000"
-            />
+    <TextView android:text="@null"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/content_itinerary_to"
+        android:textColor="#000000"
+        android:layout_gravity="center"
+        android:textSize="16dp"
+        android:background="@drawable/background_textview_itineraries"
+        android:padding="14dp"
+     />
 
-        <!--
-        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:columnCount="2"
-            android:rowCount="2" >
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
-            <TextView
-                android:text="08:00"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="0"
-                android:layout_column="0"
-                />
-
-            <TextView
-                android:text="09:00"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="0"
-                android:layout_column="1"
-                />
-
-            <TextView
-                android:text="10:00"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="1"
-                android:layout_column="0"
-                />
-
-            <TextView
-                android:text="11:00"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="1"
-                android:layout_column="1"
-                />
-        </GridLayout>
-        -->
-
-        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:shrinkColumns="*"
-            android:stretchColumns="*"
-            android:id="@+id/tableHorarios"
-            >
-        </TableLayout>
-
-        <Space
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center_horizontal"
-            android:background="#ff1a7317"
-            android:visibility="visible" />
+    <TextView
+        android:id="@android:id/empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/progressBar"
+        android:textColor="#000000"
+        />
 
     </LinearLayout>
 
