--- a/app/src/main/res/layout/item_list_station_bus.xml
+++ b/app/src/main/res/layout/item_list_station_bus.xml
@@ -33,17 +33,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@null"
-        android:layout_toRightOf="@+id/txtLogradouro"
-        android:textStyle="normal"
-        android:textSize="18sp"
-        android:textColor="#000000"
-        />
-
-    <TextView
-        android:id="@+id/txtTipo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@null"
         android:layout_toRightOf="@+id/imgIcon"
         android:layout_below="@+id/txtLogradouro"
         android:textStyle="normal"
@@ -51,14 +40,38 @@
         />
 
     <TextView
-        android:id="@+id/txtObservacao"
+        android:id="@+id/labelTipo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tipo:"
+        android:layout_toRightOf="@+id/txtNumeroProximo"
+        android:layout_below="@+id/txtLogradouro"
+        android:textStyle="normal"
+        android:textSize="16dp"
+        android:textColor="#000000"
+        android:layout_marginLeft="3dp"
+        />
+
+    <TextView
+        android:id="@+id/txtTipo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@null"
+        android:layout_toRightOf="@+id/labelTipo"
+        android:layout_below="@+id/txtLogradouro"
+        android:textStyle="normal"
+        android:textSize="16dp"
+        />
+
+    <TextView
+        android:id="@+id/txtObservacao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
         android:layout_toRightOf="@+id/imgIcon"
         android:layout_below="@+id/txtTipo"
         android:textStyle="normal"
-        android:textSize="16sp"
+        android:textSize="16dp"
         />
 
 </RelativeLayout>
